--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {},
   "dependencies": {
+    "@modulate/bixby-ms-gcp": "git+https://github.com/modulate/bixby-ms-gcp.git",
     "bixby": "^0.2.0",
-    "bixby-common": "^0.1.3"
+    "bixby-common": "^0.1.3",
+    "bixby-crane": "github:bixbyjs/bixby-crane#feature/bootable",
+    "bixby-ms": "github:bixbyjs/bixby-ms",
+    "crane": "^0.2.0",
+    "dotenv": "^6.0.0"
   },
   "engines": {
     "node": "8.x.x"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
